@@ -1,46 +1,69 @@
 #
-#	Makefile.build --- Warehouse
+#	script/Makefile.build - Warehouse
 #	
-#	This file contains various building targets.
-#	Some specific targets will be build only if Makefile
-#	that in building directory directs to do.
+#	Copyright (C) 2015 Yizhou Shan <shanyizhou@ict.ac.cn>
 #
-#	2015/06/17 Makefile is a game with words.
+#	This program is free software; you can redistribute it and/or modify
+#	it under the terms of the GNU General Public License as published by
+#	the Free Software Foundation; either version 2 of the License, or
+#	(at your option) any later version.
 #
+#	This program is distributed in the hope that it will be useful,
+#	but WITHOUT ANY WARRANTY; without even the implied warranty of
+#	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#	GNU General Public License for more details.
+#
+#	You should have received a copy of the GNU General Public License along
+#	with this program; if not, write to the Free Software Foundation, Inc.,
+#	51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 
 src := $(obj)
 
-PHONY += __build
-__build:
+PHONY += __BUILD
+__BUILD:
 
-# Clear all relevant variables
-# Avoid them inherit from enviroment or something.
+# Init all relevant variables used in kbuild files so
+# 1) they have correct type
+# 2) they do not inherit any value from the environment
 obj-y :=
-subdir-obj-y :=
-subdir-y :=
-obj-dirs :=
 lib-y :=
-lib-target :=
+subdir-y :=
+asflags-y  :=
+ccflags-y  :=
+cppflags-y :=
+ldflags-y  :=
+always :=
+targets :=
+
+subdir-asflags-y :=
+subdir-ccflags-y :=
+
 loader-y :=
 objcopy-y :=
 objdump-y :=
 
-#
-# Initialize all relevant variables
-#
 include $(srctree)/scripts/Kbuild.include
 include $(srctree)/$(src)/Makefile
 include $(srctree)/scripts/Makefile.lib
 
-#
+ifneq ($(hostprogs-y)$(hostprogs-m),)
+include scripts/Makefile.host
+endif
+
+ifndef obj
+$(warning Kbuild: Makefile.build is included improperly)
+endif
+
+# ------------------------------------------------------------------------
 # Figure out what $(srctree)/$(src)/Makefile want.
-#
-ifneq ($(strip $(obj-y)),)
+# ------------------------------------------------------------------------
+
+ifneq ($(strip $(obj-y) $(obj-) $(lib-target)),)
 builtin-target := $(obj)/built-in.o
 endif
 
-#TODO
-ifneq ($(strip $(lib-y)),)
+ifneq ($(strip $(lib-y) $(lib-)),)
+lib-target := $(obj)/lib.a
 endif
 
 ifneq ($(strip $(objcopy-y)),)
@@ -51,25 +74,43 @@ ifneq ($(strip $(objdump-y)),)
 objdump-target := $(patsubst %,%-objdump,$(objdump-y))
 endif
 
-# bootloader
 ifneq ($(strip $(loader-y)),)
 loader-target := $(loader-y)
 endif
 
-#
-# Default target has to depend on everything ;)
-#
-__build: $(builtin-target) $(subdir-y) $(loader-target) \
-		 $(objcopy-target) $(objdump-target) $(lib-target)
+# Default target depends on everything
+# ------------------------------------------------------------------------
+__BUILD: $(builtin-target) $(lib-target) $(subdir-y) $(extra-y) \
+	 $(always) \
+	 $(loader-target) $(objcopy-target) $(objdump-target)
+	@:
 
+# ------------------------------------------------------------------------
+# Build everything
+# ------------------------------------------------------------------------
 
-# If the list is empty, create an empty built-in.o
-# Caveat: %(ld_flags) contains -r which direct linker to
-# generate relocatable objects. The final executable object
-# file is generated in top Makefile.
+# 6 space alignment
+quiet_modtag := $(empty)   $(empty)
+
+# Check source sanitary
+ifneq ($(KBUILD_CHECKSRC),0)
+  ifeq ($(KBUILD_CHECKSRC),2)
+    quiet_cmd_force_checksrc = CHECK   $<
+          cmd_force_checksrc = $(CHECK) $(CHECKFLAGS) $(c_flags) $< ;
+  else
+      quiet_cmd_checksrc     = CHECK   $<
+            cmd_checksrc     = $(CHECK) $(CHECKFLAGS) $(c_flags) $< ;
+  endif
+endif
+
+#
+# Rule to compile a set of .o files into one .o file
+#
 ifdef builtin-target
+# Filter out vmSandix.ld
 _obj-y = $(filter-out %.ld, $(obj-y))
-quiet_cmd_link_o_target = LD $(SS)  $@
+# If the list is empty, create an empty built-in.o
+quiet_cmd_link_o_target = LD $(quiet_modtag)  $@
       cmd_link_o_target = \
       			$(if $(strip $(obj-y)),\
 			$(LD) $(ld_flags) -r -o $@ $(_obj-y), \
@@ -79,45 +120,57 @@ $(builtin-target): $(obj-y) FORCE
 	$(call if_changed,link_o_target)
 endif
 
-ifdef loader-target
-quiet_cmd_loader = AS $(SS)  $@
-      cmd_loader = $(CC) $(a_flags) -c -o $@ $<
-
-$(loader-target): $(patsubst %.o,%.S,$(loader-y)) 
-	$(call if_changed,loader)
-endif
-
-ifdef objcopy-target
-quiet_cmd_objcopy = OBJCOPY $@
-      cmd_objcopy = $(OBJCOPY) $(objcopy_flags) $< $@
-
-$(objcopy-target): $(objcopy-y) FORCE
-	$(call if_changed,objcopy)
-endif
-
-ifdef objdump-target
-quiet_cmd_objdump = OBJDUMP $@
-      cmd_objdump = $(OBJDUMP) $(objdump_flags) $(patsubst %-objdump,%,$@) >$@
-
-$(objdump-target): $(objdump-y) FORCE
-	$(call if_changed,objdump)
-endif
-
-ifneq ($(strip $(lib-target)),)
-quiet_cmd_link_l_target = AR $(SS)  $@
+#
+# Rule to compile a set of .o files into one .a file
+#
+ifdef lib-target
+quiet_cmd_link_l_target = AR $(quiet_modtag)  $@
       cmd_link_l_target = rm -f $@; $(AR) rcs$(KBUILD_ARFLAGS) $@ $(lib-y)
 
 $(lib-target): $(lib-y) FORCE
 	$(call if_changed,link_l_target)
 endif
 
+#
+# Rule to compile simple boot loader
+#
+ifdef loader-target
+quiet_cmd_loader = AS $(quiet_modtag)  $@
+      cmd_loader = $(CC) $(a_flags) -c -o $@ $<
+
+$(loader-target): $(patsubst %.o,%.S,$(loader-y)) 
+	$(call if_changed_dep,loader)
+endif
+
+#
+# Rule to use objcopy
+#
+ifdef objcopy-target
+quiet_cmd_objcopy = OBJCOPY $@
+      cmd_objcopy = $(OBJCOPY) $(objcopy_flags) $< $@
+
+$(objcopy-target): $(objcopy-y) FORCE
+	$(call if_changed_dep,objcopy)
+endif
+
+#
+# Rule to use objdump
+#
+ifdef objdump-target
+quiet_cmd_objdump = OBJDUMP $@
+      cmd_objdump = $(OBJDUMP) $(objdump_flags) $(patsubst %-objdump,%,$@) >$@
+
+$(objdump-target): $(objdump-y) FORCE
+	$(call if_changed_dep,objdump)
+endif
+
 
 # Descending into sub-directory
+# ------------------------------------------------------------------------
 $(sort $(subdir-obj-y)): $(subdir-y) ;
 PHONY += $(subdir-y)
 $(subdir-y):
 	$(Q)$(MAKE) $(BUILD)=$@
-
 
 # include dependencies
 _dep_files := $(filter-out $(subdir-obj-y),$(obj-y) $(loader-y))
@@ -127,72 +180,93 @@ ifneq ($(dep_files),)
   -include $(dep_files)
 endif
 
-
-# .c --> .o
-# ---------------------------------------------------------------------------
-#* Target: $(obj)/%.o
-#* Depend on: $(src)/%.c
-#* Desc: Compile (.c) to (.o)
-# ---------------------------------------------------------------------------
-# The C file is compiled and updated dependency information is generated.
-quiet_cmd_cc_o_c = CC $(SS)  $@
-      cmd_cc_o_c = $(CC) $(c_flags) -c -o $@ $<
-
-$(obj)/%.o: $(src)/%.c FORCE
-	$(call if_changed,cc_o_c)
-
+# ------------------------------------------------------------------------
+# Compile C sources (.c)
+# ------------------------------------------------------------------------
 
 # .c --> .s
-# ---------------------------------------------------------------------------
-#* Target: $(obj)/%.s
-#* Depend on: $(src)/%.c
-#* Desc: Compile (.c) to (.s)
-# ---------------------------------------------------------------------------
-quiet_cmd_cc_s_c = CC $(SS)  $@
+quiet_cmd_cc_s_c = CC $(quiet_modtag)  $@
       cmd_cc_s_c = $(CC) $(c_flags) -fverbose-asm -S -o $@ $<
 
 $(obj)/%.s: $(src)/%.c FORCE
-	$(call if_changed,cc_s_c)
+	$(call if_changed_dep,cc_s_c)
 
 
 # .c --> .i
-# ---------------------------------------------------------------------------
-#* Target: $(obj)/%.i
-#* Depend on: $(src)/%.c
-#* Desc: Compile (.c) to (.i)
-# ---------------------------------------------------------------------------
-quiet_cmd_cc_i_c = CPP $(SS) $@
+quiet_cmd_cc_i_c = CPP $(quiet_modtag) $@
       cmd_cc_i_c = $(CPP) $(c_flags) -o $@ $<
 
 $(obj)/%.i: $(src)/%.c FORCE
-	$(call if_changed,cc_i_c)
+	$(call if_changed_dep,cc_i_c)
 
-# .ld.S --> .ld
-# ---------------------------------------------------------------------------
-#* Target: $(obj)/%.ld
-#* Depend on: $(src)/%.ld.S
-#* Desc: Preprocess Linker Script
-# ---------------------------------------------------------------------------
-quiet_cmd_ld_o_S = LDS $(SS)$@
-      cmd_ld_o_S = $(CPP) $(cpp_flags) -P -C -D__ASSEMBLY__ -o $@ $<
+# .c --> .symtypes
+cmd_gensymtypes =                                                   \
+    $(CPP) -D__GENKSYMS__ $(c_flags) $< |                           \
+    $(GENKSYMS) $(if $(1), -T $(2))                                 \
+     $(patsubst y,-s _,$(CONFIG_HAVE_UNDERSCORE_SYMBOL_PREFIX))     \
+     $(if $(KBUILD_PRESERVE),-p)                                    \
+     -r $(firstword $(wildcard $(2:.symtypes=.symref) /dev/null))
 
-$(obj)/%.ld: $(src)/%.ld.S FORCE
-	$(call if_changed,ld_o_S)
+quiet_cmd_cc_symtypes_c = SYM $(quiet_modtag) $@
+      cmd_cc_symtypes_c =                                           \
+          set -e;                                                   \
+          $(call cmd_gensymtypes,true,$@) >/dev/null;               \
+          test -s $@ || rm -f $@
 
+$(obj)/%.symtypes : $(src)/%.c FORCE
+	$(call cmd,cc_symtypes_c)
+
+# .c --> .o
+# The C file is compiled and updated dependency information is generated.
+quiet_cmd_cc_o_c = CC $(quiet_modtag)  $@
+      cmd_cc_o_c = $(CC) $(c_flags) -c -o $@ $<
+
+define rule_cc_o_c
+	$(call echo-cmd,checksrc) $(cmd_checksrc)			  \
+	$(call echo-cmd,cc_o_c) $(cmd_cc_o_c);				  \
+	scripts/basic/fixdep $(depfile) $@ '$(call make-cmd,cc_o_c)' >    \
+	                                              $(dot-target).tmp;  \
+	rm -f $(depfile);						  \
+	mv -f $(dot-target).tmp $(dot-target).cmd
+endef
+
+# Built-in
+$(obj)/%.o: $(src)/%.c FORCE
+	$(call cmd,force_checksrc)
+	$(call if_changed_rule,cc_o_c)
+
+# ------------------------------------------------------------------------
+# Compile Assembly Sources (.S)
+# ------------------------------------------------------------------------
+
+# .S --> .s
+quiet_cmd_as_s_S = CPP $(quiet_modtag) $@
+      cmd_as_s_S = $(CPP) $(a_flags) -o $@ $<
+
+$(obj)/%.s: $(src)/%.S FORCE
+	$(call if_changed_dep,as_s_S)
 
 # .S --> .o
-# ---------------------------------------------------------------------------
-#* Target: $(obj)/%.o
-#* Depend on: $(src)/%.S
-#* Desc: Compile (.S) to (.o)
-# ---------------------------------------------------------------------------
-quiet_cmd_as_o_S = AS $(SS)  $@
+quiet_cmd_as_o_S = AS $(quiet_modtag)  $@
       cmd_as_o_S = $(CC) $(a_flags) -c -o $@ $<
 
 $(obj)/%.o: $(src)/%.S FORCE
 	$(call if_changed,as_o_S)
 
+# ------------------------------------------------------------------------
+# Linker scripts preprocessor (.ld.S -> .ld)
+# ------------------------------------------------------------------------
 
+# .ld.S --> .ld
+quiet_cmd_cpp_ld_S = LDS $(quiet_modtag) $@
+      cmd_cpp_ld_S = $(CPP) $(cpp_flags) -P -C -D__ASSEMBLY__ -DLINKER_SCRIPT -o $@ $<
+
+$(obj)/%.ld: $(src)/%.ld.S FORCE
+	$(call if_changed_dep,cpp_ld_S)
+
+
+# Add FORCE to prequisites of a target to force it to be always rebuilt.
+# ------------------------------------------------------------------------
 PHONY += FORCE
 FORCE:
 
